cert-manager/grafana-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-grafana
  namespace: default
spec:
  type: ExternalName
  externalName: grafana.grafana.svc.cluster.local
